<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->

<resources>
    <string name="app_name">Mercury Patch</string>
    <string name="begin">BEGIN</string>
    <string name="title_activity_main">PatientSelect</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">ADD NEW PATIENT</string>
    <string name="edit">EDIT PATIENT</string>
    <string name="delete">DELETE PATIENT</string>
    <string name="save">SAVE PATIENT</string>
    <string name="name">Name</string>
    <string name="patientMedId">ID</string>
    <string name="room">Room</string>
    <string name="age">Age</string>
    <string name="placementconfirm">Confirm Placement?</string>
    <string name="deletePatient">Confirm patient deletion.</string>
    <string name="existsPatient">Patient already exists.</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>
    <string name="SA">Selected:  Sacral</string>
    <string name="THL">Selected:  Left Thigh</string>
    <string name="THR">Selected:  Right Thigh</string>
    <string name="HL">Selected:  Left Heel</string>
    <string name="HR">Selected:  Right Heel</string>
    <string name="HD">Selected:  Head</string>
    <string name="title_activity_activity_edit">CreateOrEditActivity</string>
    <string name="no_ble">Device Missing BLE!</string>
    <string name="startconnection">Setup complete, press CONNECT to commence session.</string>


    <!-- Imported from Nordic Semiconductor BLE UART Tutorial notice at top -->
    <string name="device">Device:</string>
    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Currently available Mercury Patches</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for Mercury Patches...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">connect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit Mercury Patch</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Re-Scan</string>
    <string name="cancel">Cancel</string>
    <string name="timings">Total Pressure Time</string>
    <string name="timings_title">Time at Pressure Levels</string>

    <string name="shortcut_dfu_short">DFU</string>
    <string name="shortcut_dfu_long">Device Firmware Update</string>
    <string name="shortcut_uart_short">UART</string>
    <string name="shortcut_uart_long">UART Service</string>

    <string name="ok">OK</string>

    <string name="action_about">About</string>
    <string name="action_connect">CONNECT TO MERCURY PATCH</string>
    <string name="action_select">SELECT MERCURY PATCH</string>
    <string name="action_add_device">ADD MERCURY PATCH</string>
    <string name="action_connecting">CONNECTING…</string>
    <string name="action_disconnect">DISCONNECT</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">CLOSE</string>
    <string name="drawer_plugins">PLUGINS</string>
    <string name="drawer_plugin_nrf_connect">Stuff</string>

    <string name="battery">%d%%</string>
    <string name="not_available">n/a</string>
    <string name="not_available_value">" - "</string>
    <string name="no_apps">No profiles found.</string>
    <string name="not_supported">The device does not have required services.</string>
    <string name="no_application">Web Browser application is not available.</string>
    <string name="no_uri_application">There is no application that can open this URI.</string>
    <string name="no_application_play">Google Play not installed.</string>
    <string name="no_required_permission">Permission denied.</string>
    <string name="scanner_title">Select Mercury Patch:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Re-Scan for Mercury Patch</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE PATCHES:</string>
    <string name="scanner_permission_rationale">Android 6.0 Marshmallow requires access to device\'s location.</string>
    <string name="bonding">Bonding with the device&#8230;</string>
    <string name="bonded">The device is now bonded.</string>
    <string name="permission_title">Permission required</string>
    <string name="permission_sd_text">The risk was calculated, but man I am bad at math.</string>
    <string name="about_title">About</string>
    <string name="about_version">\n\nVersion: %s</string>
    <string name="about_text">Mercury Patch is a patient pressure monitoring system built upon a third party BLE and GATT services stack.</string>
    <string name="uart_feature_title">MERCURY PATCH</string>
    <string name="uart_default_name">MERCURY PATCH</string>
    <string name="uart_about_text">UART profile (Universal Asynchronous Receiver and Transmitter) is a Bluetooth Smart implementation of the UART standard. It allows for bidirectional
        text based communication that is often used for debugging and control. </string>
    <string name="uart_notification_action_disconnect">Disconnect</string>
    <string name="uart_notification_connected_message">%s is connected.</string>
    <string name="action_setcolor">ADJUST THRESHOLDS</string>
    <string name="Caution">1000</string>
    <string name="Danger">1200</string>
    <string name="CautionName">Caution</string>
    <string name="DangerName">Danger</string>
    <string name="xaxis">Time</string>
    <string name="yaxis">Pressure (mmHg)</string>
    <string name="graph_title">Pressure Sensor History</string>
    <string name="ThresholdTitle">Threshold</string>
    <string name="ValueTitle">mmHg</string>
    <string name="BarTitle">Selection</string>
    <string name="servicesConnect">Starting Mercury Service</string>

</resources>
