<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:ems="12"
            android:inputType="text">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_below="@+id/editTextName"
            android:ems="12"/>

        <EditText
            android:id="@+id/editTextRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextName"
            android:layout_below="@+id/editTextID"
            android:ems="12"
            android:inputType="text"/>



        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextName"
            android:layout_toRightOf="@+id/editTextName"
            android:layout_alignParentLeft="true"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/textViewPatientID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextID"
            android:layout_toRightOf="@+id/editTextID"
            android:layout_alignParentLeft="true"
            android:text="@string/patientMedId"/>

        <TextView
            android:id="@+id/textViewRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editTextRoom"
            android:layout_toRightOf="@+id/editTextRoom"
            android:layout_alignParentLeft="true"
            android:text="@string/room"/>

        <Button
            android:id="@+id/saveButton"
            style="@style/Widget.Connect"
            android:background="@drawable/button_standard"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:maxLines="2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_below="@id/textViewRoom"
            android:text="@string/save" />

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:visibility="gone"
            android:layout_below="@id/textViewRoom">

            <Button
                android:id="@+id/deleteButton"
                style="@style/Widget.Connect"
                android:background="@drawable/button_standard"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:maxLines="2"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/delete"/>

            <Button
                android:id="@+id/editButton"
                style="@style/Widget.Connect"
                android:background="@drawable/button_standard"
                android:layout_width="0dp"
                android:maxLines="2"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/edit"/>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>